@@ -1,3 +1,3 @@
 SET(SRC_T13 cannonfield.cs gameboard.cs lcdrange.cs main.cs)
-ADD_CUSTOM_TARGET (t13.exe ALL ${GMCS_PATH} -unsafe -warn:0 -out:t13.exe -r:../../../qt-dotnet.dll ${SRC_T13})
+ADD_CUSTOM_TARGET (t13.exe ALL ${GMCS_PATH} -unsafe -warn:0 -out:t13.exe -r:../../../qt-dotnet.dll ${SRC_T13} COMMENT "Building t13.exe")
 
