@@ -1,3 +1,3 @@
 SET(SRC_T2 t2.cs)
-ADD_CUSTOM_TARGET (t2.exe ALL ${GMCS_PATH} -unsafe -warn:0 -out:t2.exe -r:../../../qt-dotnet.dll ${SRC_T2})
+ADD_CUSTOM_TARGET (t2.exe ALL ${GMCS_PATH} -unsafe -warn:0 -out:t2.exe -r:../../../qt-dotnet.dll ${SRC_T2} COMMENT "Building t2.exe")
 
