@@ -1,3 +1,3 @@
 SET(SRC_T5 t5.cs)
-ADD_CUSTOM_TARGET (t5.exe ALL ${GMCS_PATH} -unsafe -warn:0 -out:t5.exe -r:../../../qt-dotnet.dll ${SRC_T5})
+ADD_CUSTOM_TARGET (t5.exe ALL ${GMCS_PATH} -unsafe -warn:0 -out:t5.exe -r:../../../qt-dotnet.dll ${SRC_T5} COMMENT "Building t5.exe")
 
