@@ -1,3 +1,8 @@
+2007-02-14  Arno Rehn  <arno@arnorehn.de>
+
+	* Fixed compilation error in t14
+	* Modified all CMakeLists.txt to produce nicer output
+
 2007-02-14  Richard Dale  <rdale@foton.es>
 
 	* Added cmake files for building the csrcc tool
